[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/fonts/KosugiMaru-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/ListItem.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 60
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 22
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 12
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 12
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 20
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="ListItem" type="Panel"]
margin_right = 780.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_right = -20.0
rect_min_size = Vector2( 0, 100 )
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KanjiArea" type="VBoxContainer" parent="ItemContainer"]
margin_right = 74.0
margin_bottom = 100.0

[node name="EmptySpaceTop" type="Control" parent="ItemContainer/KanjiArea"]
margin_right = 74.0
margin_bottom = 8.0
rect_min_size = Vector2( 0, 8 )

[node name="KanjiContainer" type="PanelContainer" parent="ItemContainer/KanjiArea"]
margin_top = 12.0
margin_right = 74.0
margin_bottom = 87.0

[node name="Kanji" type="Label" parent="ItemContainer/KanjiArea/KanjiContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 67.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 1 )
text = "çŒ«"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EmptySpaceBottom" type="Control" parent="ItemContainer/KanjiArea"]
margin_top = 91.0
margin_right = 74.0
margin_bottom = 97.0
rect_min_size = Vector2( 0, 6 )

[node name="TwoLineDescription" type="VBoxContainer" parent="ItemContainer"]
margin_left = 94.0
margin_right = 630.0
margin_bottom = 100.0
size_flags_horizontal = 3
custom_constants/separation = 5
alignment = 1

[node name="MeaningsLabel" type="Label" parent="ItemContainer/TwoLineDescription"]
margin_top = 8.0
margin_right = 536.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 2 )
text = "cat, cat, cat, cat, cat, cat, cat, cat, cat, cat, cat, cat"
autowrap = true

[node name="VBoxContainer" type="VBoxContainer" parent="ItemContainer/TwoLineDescription"]
margin_top = 62.0
margin_right = 536.0
margin_bottom = 92.0
alignment = 1

[node name="CorrectnessLabel" type="Label" parent="ItemContainer/TwoLineDescription/VBoxContainer"]
margin_right = 536.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 3 )
text = "Correctness: 89.98%"

[node name="WeightLabel" type="Label" parent="ItemContainer/TwoLineDescription/VBoxContainer"]
margin_top = 17.0
margin_right = 536.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 4 )
text = "Weight: 1000.189"

[node name="ButtonContainer" type="VBoxContainer" parent="ItemContainer"]
margin_left = 650.0
margin_right = 740.0
margin_bottom = 100.0
rect_min_size = Vector2( 90, 0 )
custom_constants/separation = 15
alignment = 1

[node name="Edit" type="Button" parent="ItemContainer/ButtonContainer"]
margin_top = 12.0
margin_right = 90.0
margin_bottom = 42.0
rect_min_size = Vector2( 80, 30 )
focus_mode = 0
custom_fonts/font = SubResource( 5 )
enabled_focus_mode = 0
text = "Edit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Delete" type="Button" parent="ItemContainer/ButtonContainer"]
margin_top = 57.0
margin_right = 90.0
margin_bottom = 87.0
rect_min_size = Vector2( 0, 30 )
focus_mode = 0
custom_fonts/font = SubResource( 5 )
enabled_focus_mode = 0
text = "Delete"
